Fix x overflow

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
     min-height: 100vh;
+    overflow-x: hidden;
     margin: 0;
 }
 
